[gd_scene load_steps=9 format=2]

[ext_resource path="res://llop.gd" type="Script" id=1]
[ext_resource path="res://Nivell 5/wolf-runing-cycle.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 56, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 56, 0, 56, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 56, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 56, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 7.5
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 24.613, 10 )

[node name="llop" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -1 )
frames = SubResource( 5 )
frame = 3
playing = true

[node name="FloorDetection" type="RayCast2D" parent="AnimatedSprite"]
position = Vector2( -27.546, -1.32433 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.667419, 4.99661 )
shape = SubResource( 6 )

[node name="LeftRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -30, 0 )

[node name="RightRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 25, 0 )
